automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <div class="wrapper">
       <div id="front" class="album">
         <div id="title-box">
+          <h4>PHARRELL WILLIAMS</h4>
+          <h2>Happy</h2>
+          <h4>From DESPICABLE ME...</h4>
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
 
           <!-- Level 2 'HAPPY' Header -->
@@ -19,7 +22,15 @@
       </div>
 
       <div id="back" class="album">
-
+        
+              <h3>FROM DESPICABLE ME...</h3>
+              <h1>Happy</h1>
+              <h3>WRITTEN BY...</h3>
+              <p>PUBLISHED BY...</p>
+              <span>PHARRELLWILLIAMS.COM</span>
+              <img
+              src= "columbia-logo.png">
+              <span>COLUMBIARECORDS.COM</span>
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
 
         <!-- Level 1 'HAPPY' Header -->
@@ -35,7 +46,8 @@
         <!-- span text 'COLUMBIARECORDS.COM' -->
 
         <br>
-
+          <img
+          src="sony-logo.png">
         <!-- image [sony-logo.png] -->
 
       </div>
