--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div id="front" class="album">
         <div id="title-box">
           <h4>PHARRELL WILLIAMS</h4>
-          <h2>Happy</h2>
+          <h2>HAPPY</h2>
           <h4>From DESPICABLE ME...</h4>
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
 
